# AUV

./: .gitignore  LICENSE  README.md
Code/C++/: CMakeLists.txt  main.cpp  readme.md  run.sh
Code/C++/AUVSetup/: AUVSetup.cpp  AUVSetup.hpp  CMakeLists.txt
Code/C++/ControlPipeline/: CMakeLists.txt  ControlPipeline.cpp
Code/C++/Functions/: fAnglesToTensor.cpp  fBuffer2D.cpp  fCalculateCosine.cpp  fCart2Sph.cpp  fColumnNormalize.cpp  fConvolve1D.cpp  fConvolveColumns.cpp  fCreateBoxes.cpp  fCreateHills.cpp  fGetCurrentTimeFormatted.cpp  fPrintTensorSize.cpp  fRunSystemScriptInSeperateThread.cpp  fSph2Cart.cpp
Code/C++/SeafloorSetup/: CMakeLists.txt  SeaFloorSetup.hpp  SeafloorSetup.cpp
Code/C++/SignalSimulation/: CMakeLists.txt  SignalSimulation.cpp
Code/C++/TransmitterSetup/: CMakeLists.txt  TransmitterSetup.cpp  TransmitterSetup.hpp
Code/C++/ULASetup/: CMakeLists.txt  ULASetup.cpp  ULASetup.hpp
Code/C++/include/: AUVClass.h  AUVClass.hpp  AUVClass_image.inl  AUVClass_init.inl  AUVClass_simulate_signal.inl  AUVClass_step.inl  AUVClass_subset_scatterers.inl  AUVClass_syncComponentAttributes.inl  FFTPlanClass.hpp  FFTPlanPoolClass.hpp  FFTPlanUniformPoolHandle.hpp  IFFTPlanClass.hpp  IFFTPlanPoolClass.hpp  IFFTPlanUniformPoolHandle.hpp  ScattererClass.h  ScattererClass.hpp  TimerClass.hpp  TransmitterClass.h  TransmitterClass.hpp  TransmitterClass_subset_scatterers.inl  TransmitterClass_updatePointingAngle.inl  ULAClass.h  ULAClass.hpp  ULAClass_beamform.inl  ULAClass_buildCoordinatesBasedOnLocation.inl  ULAClass_decimate_signal.inl  ULAClass_image.inl  ULAClass_init.inl  ULAClass_init_beamforming.inl  ULAClass_nfdc_CreateMatchFilter.inl  ULAClass_simulate_signals.inl  auv_parameters.hpp  before.hpp  classes.h  config.h  fCreateHills.hpp  functions.h  setupscripts.h  svr_concatenate.hpp  svr_concepts.hpp  (+32 more)
Code/C++/src/: Projector.cpp  Scatterer.cpp
(+18 files in other folders)
